Fix spacing

--- a/assets/css/_layout.scss
+++ b/assets/css/_layout.scss
@@ -8,3 +8,7 @@
   height: 70px;
   line-height: 70px
 }
+
+.pb5  { padding-bottom: 5rem }
+.pb6  { padding-bottom: 6rem }
+.pb7  { padding-bottom: 7rem }
